nexus/nexus-pvc-pv.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-nexus
  namespace: devops
subsets:
- addresses:
  - ip: 10.235.9.42
  - ip: 10.235.9.43
  - ip: 10.235.9.44
  ports:
  - port: 49160
    protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: glusterfs-nexus
  namespace: devops
spec:
  ports:
    - port: 49160
