nexus/nexus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nexus
  namespace: devops
  labels:
    nfs: nexus-service
    deploy-nexus: support
  annotations:
    description: Exposes Nexus Service
spec:
  type: ClusterIP
  selector:     
    name: nexus    
  ports:
    - name: nexus
      port: 8081
      targetPort: 8081
      # nodePort: 30008
